# rust_api_sample

./: Cargo.toml  README.md
src/: main.rs
web/templates/: compliment.html
